<resources>
    <string name="app_name">Lets Browse</string>
    <string name="enter_url">Enter Url</string>
    <string name="go_btn">Go Button</string>
    <string name="settings_btn">Settings Button</string>
    <string name="search_hint">Search</string>

    <string name="homePage">HomePage</string>
    <string name="bookmark">Bookmark</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="fullscreen">FullScreen</string>
    <string name="save">Save</string>
    <string name="desktop">Desktop</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="view_all">View All</string>
    <string name="all_bookmarks">All Bookmarks</string>
    <string name="refresh_btn">Refresh</string>
    <string name="one">1</string>
</resources>